--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://online-exam.cswc818y3x3o.us-east-1.rds.amazonaws.com:5432/onlineexam
-spring.datasource.username=postgres
-spring.datasource.password=admin123
+#spring.datasource.url=jdbc:postgresql://online-exam.cswc818y3x3o.us-east-1.rds.amazonaws.com:5432/onlineexam
+spring.datasource.url=jdbc:postgresql://demodb.cswc818y3x3o.us-east-1.rds.amazonaws.com:5432/demodb
+#spring.datasource.username=postgres
+spring.datasource.username=pradeep
+#spring.datasource.password=admin123
+spring.datasource.password=Passw0rd!123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
